--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -29,7 +29,7 @@ OBJDIR_DEBUG = obj/Debug
 DEP_DEBUG = 
 OUT_DEBUG = bin/Debug/ClassSchedulingTests
 
-OBJ_DEBUG = $(OBJDIR_DEBUG)/src/main.o $(OBJDIR_DEBUG)/src/VectorPrinter.o $(OBJDIR_DEBUG)/src/TestScoreCalculators.o $(OBJDIR_DEBUG)/src/TestScheduleWriter.o $(OBJDIR_DEBUG)/src/TestSchedule.o $(OBJDIR_DEBUG)/src/TestRunner.o $(OBJDIR_DEBUG)/src/TestRoomReader.o $(OBJDIR_DEBUG)/src/TestRoom.o $(OBJDIR_DEBUG)/src/TestProfReader.o $(OBJDIR_DEBUG)/src/TestProfInfo.o $(OBJDIR_DEBUG)/src/TestProf.o $(OBJDIR_DEBUG)/src/TestGreedyScheduleGenerator.o $(OBJDIR_DEBUG)/src/TestGeneticScheduleGenerator.o $(OBJDIR_DEBUG)/src/TestFileReaderFactory.o $(OBJDIR_DEBUG)/src/TestCourseReader.o $(OBJDIR_DEBUG)/src/TestCourse.o $(OBJDIR_DEBUG)/src/TestConflictPreprocessor.o $(OBJDIR_DEBUG)/src/ObjectPrinter.o $(OBJDIR_DEBUG)/src/DataCreator.o $(OBJDIR_DEBUG)/__/src/WeightedScoreCalculator.o $(OBJDIR_DEBUG)/__/src/Schedule.o $(OBJDIR_DEBUG)/__/src/RoomReader.o $(OBJDIR_DEBUG)/__/src/Room.o $(OBJDIR_DEBUG)/__/src/ProfReader.o $(OBJDIR_DEBUG)/__/src/Prof.o $(OBJDIR_DEBUG)/__/src/LinearScoreCalculator.o $(OBJDIR_DEBUG)/__/src/FileReaderFactory.o $(OBJDIR_DEBUG)/__/src/CourseReader.o $(OBJDIR_DEBUG)/__/src/Course.o $(OBJDIR_DEBUG)/__/src/ConflictPreprocessor.o
+OBJ_DEBUG = $(OBJDIR_DEBUG)/src/main.o $(OBJDIR_DEBUG)/src/VectorPrinter.o $(OBJDIR_DEBUG)/src/TestScoreCalculators.o $(OBJDIR_DEBUG)/src/TestScheduleWriter.o $(OBJDIR_DEBUG)/src/TestSchedule.o $(OBJDIR_DEBUG)/src/TestRunner.o $(OBJDIR_DEBUG)/src/TestRoomReader.o $(OBJDIR_DEBUG)/src/TestRoom.o $(OBJDIR_DEBUG)/src/TestProfReader.o $(OBJDIR_DEBUG)/src/TestProfInfo.o $(OBJDIR_DEBUG)/src/TestProf.o $(OBJDIR_DEBUG)/src/TestGreedyScheduleGenerator.o $(OBJDIR_DEBUG)/src/TestGeneticScheduleGenerator.o $(OBJDIR_DEBUG)/src/TestFileReaderFactory.o $(OBJDIR_DEBUG)/src/TestCourseReader.o $(OBJDIR_DEBUG)/src/TestCourse.o $(OBJDIR_DEBUG)/src/TestConflictPreprocessor.o $(OBJDIR_DEBUG)/src/ObjectPrinter.o $(OBJDIR_DEBUG)/src/MapPrinter.o $(OBJDIR_DEBUG)/src/DataCreator.o $(OBJDIR_DEBUG)/__/src/WeightedScoreCalculator.o $(OBJDIR_DEBUG)/__/src/ScheduleWriter.o $(OBJDIR_DEBUG)/__/src/Schedule.o $(OBJDIR_DEBUG)/__/src/RoomReader.o $(OBJDIR_DEBUG)/__/src/Room.o $(OBJDIR_DEBUG)/__/src/ProfReader.o $(OBJDIR_DEBUG)/__/src/Prof.o $(OBJDIR_DEBUG)/__/src/LinearScoreCalculator.o $(OBJDIR_DEBUG)/__/src/GreedyScheduleGenerator.o $(OBJDIR_DEBUG)/__/src/GeneticScheduleGenerator.o $(OBJDIR_DEBUG)/__/src/FileReaderFactory.o $(OBJDIR_DEBUG)/__/src/CourseReader.o $(OBJDIR_DEBUG)/__/src/Course.o $(OBJDIR_DEBUG)/__/src/ConflictPreprocessor.o
 
 all: debug
 
@@ -101,11 +101,17 @@ $(OBJDIR_DEBUG)/src/TestConflictPreprocessor.o: src/TestConflictPreprocessor.cpp
 $(OBJDIR_DEBUG)/src/ObjectPrinter.o: src/ObjectPrinter.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/ObjectPrinter.cpp -o $(OBJDIR_DEBUG)/src/ObjectPrinter.o
 
+$(OBJDIR_DEBUG)/src/MapPrinter.o: src/MapPrinter.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/MapPrinter.cpp -o $(OBJDIR_DEBUG)/src/MapPrinter.o
+
 $(OBJDIR_DEBUG)/src/DataCreator.o: src/DataCreator.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/DataCreator.cpp -o $(OBJDIR_DEBUG)/src/DataCreator.o
 
 $(OBJDIR_DEBUG)/__/src/WeightedScoreCalculator.o: ../src/WeightedScoreCalculator.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/WeightedScoreCalculator.cpp -o $(OBJDIR_DEBUG)/__/src/WeightedScoreCalculator.o
+
+$(OBJDIR_DEBUG)/__/src/ScheduleWriter.o: ../src/ScheduleWriter.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/ScheduleWriter.cpp -o $(OBJDIR_DEBUG)/__/src/ScheduleWriter.o
 
 $(OBJDIR_DEBUG)/__/src/Schedule.o: ../src/Schedule.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/Schedule.cpp -o $(OBJDIR_DEBUG)/__/src/Schedule.o
@@ -124,6 +130,12 @@ $(OBJDIR_DEBUG)/__/src/Prof.o: ../src/Prof.cpp
 
 $(OBJDIR_DEBUG)/__/src/LinearScoreCalculator.o: ../src/LinearScoreCalculator.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/LinearScoreCalculator.cpp -o $(OBJDIR_DEBUG)/__/src/LinearScoreCalculator.o
+
+$(OBJDIR_DEBUG)/__/src/GreedyScheduleGenerator.o: ../src/GreedyScheduleGenerator.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/GreedyScheduleGenerator.cpp -o $(OBJDIR_DEBUG)/__/src/GreedyScheduleGenerator.o
+
+$(OBJDIR_DEBUG)/__/src/GeneticScheduleGenerator.o: ../src/GeneticScheduleGenerator.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/GeneticScheduleGenerator.cpp -o $(OBJDIR_DEBUG)/__/src/GeneticScheduleGenerator.o
 
 $(OBJDIR_DEBUG)/__/src/FileReaderFactory.o: ../src/FileReaderFactory.cpp
 	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c ../src/FileReaderFactory.cpp -o $(OBJDIR_DEBUG)/__/src/FileReaderFactory.o
